--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,15 @@
 {
-    "name": "ullo-client-start",
-    "description": "Ullo client web app for dish ratings",
-    "version": "0.0.1",
-    "homepage": "http://ulloclient.wslabs.it",
-    "license": "MIT",
-    "private": true,
-    "dependencies": {
-      "angular": "1.5.3",
-      "angular-route": "1.5.3"
-    }
+  "name": "ullo-client-start",
+  "description": "Ullo client web app for dish ratings",
+  "version": "0.0.1",
+  "homepage": "http://ulloclient.wslabs.it",
+  "license": "MIT",
+  "private": true,
+  "dependencies": {
+    "angular": "1.5.3",
+    "angular-route": "1.5.3",
+    "angular-animate": "1.5.5",
+    "animate.css": "3.5.1",
+    "dynamics.js": "1.0.0"
+  }
 }
