--- a/config.json
+++ b/config.json
@@ -1,77 +1,74 @@
 {
-  "name": "ullo-client",
-  "paths": {
-    "node": "./node_modules",
-    "bower": "./bower_components",
-    "src": "./src",
-    "root": "./wwwroot"
-  },
-  "folders": {
-    "css": "/css",
-    "js": "/js"
-  },
-  "bundles": {
-    "css": [
-      {
-        "src": [
-          "./bower_components/animate.css/animate.css"
-        ],
-        "folder": "./wwwroot/css/vendors"
-      }
+    "name": "ullo-client",
+    "paths": {
+        "node": "./node_modules",
+        "bower": "./bower_components",
+        "src": "./src",
+        "root": "./wwwroot"
+    },
+    "folders": {
+        "css": "/css",
+        "js": "/js"
+    },
+    "bundles": {
+        "css": [{
+            "src": [
+                "./bower_components/animate.css/animate.css"                
+            ],
+            "folder": "./wwwroot/css/vendors"
+        }],
+        "js": [{
+            "src": [
+                "./bower_components/dynamics.js/lib/dynamics.js",
+                "./bower_components/angular/angular.js",
+                "./bower_components/angular-route/angular-route.js",
+                "./bower_components/angular-animate/angular-animate.js",                
+                "./bower_components/angular-messages/angular-messages.js",
+                "./bower_components/angular-relative-date/dist/angular-relative-date.js",
+                "./bower_components/ng-file-upload/ng-file-upload.js"
+            ],
+            "folder": "./wwwroot/js/vendors"
+        }, {
+            "src": [
+                "./src/js/app.js",
+                "./src/js/animations/animations.js",
+                "./src/js/config/config.js",
+                "./src/js/controllers/controllers.js",
+				"./src/js/directives/directives.js",
+				"./src/js/filters/filters.js",
+                "./src/js/models/models.js",
+                "./src/js/providers/providers.js",
+                "./src/js/services/services.js",
+                "./src/js/workers/workers.js"
+            ],
+            "folder": "./wwwroot/js/app",
+            "dist": "./wwwroot/js/app.js",
+			"lints": true
+        }, {
+            "src": [
+                "./src/js/workers/http.js",
+                "./src/js/workers/loader.js"
+            ],
+            "folder": "./wwwroot/js/workers"
+        }]
+    },
+    "browserlist": [
+        "Chrome >= 30",
+        "Firefox >= 30",
+        "Explorer >= 9",
+        "Opera >= 20",
+        "Safari >= 6",
+        "iOS >= 5",
+        "Edge >= 12",
+        "ExplorerMobile >= 10"
     ],
-    "js": [
-      {
-        "src": [
-          "./bower_components/angular/angular.js",
-          "./bower_components/angular-route/angular-route.js",
-          "./bower_components/angular-animate/angular-animate.js",
-          "./bower_components/dynamics.js/lib/dynamics.js"
-        ],
-        "folder": "./wwwroot/js/vendors"
-      },
-      {
-        "src": [
-          "./src/js/app.js",
-          "./src/js/animations/animations.js",
-          "./src/js/config/config.js",
-          "./src/js/controllers/controllers.js",
-          "./src/js/directives/directives.js",
-          "./src/js/filters/filters.js",
-          "./src/js/models/models.js",
-          "./src/js/providers/providers.js",
-          "./src/js/services/services.js",
-          "./src/js/workers/workers.js"
-        ],
-        "folder": "./wwwroot/js/app",
-        "dist": "./wwwroot/js/app.js",
-        "lints": true
-      },
-      {
-        "src": [
-          "./src/js/workers/http.js",
-          "./src/js/workers/loader.js"
-        ],
-        "folder": "./wwwroot/js/workers"
-      }
-    ]
-  },
-  "browserlist": [
-    "Chrome >= 30",
-    "Firefox >= 30",
-    "Explorer >= 9",
-    "Opera >= 20",
-    "Safari >= 6",
-    "iOS >= 5",
-    "Edge >= 12",
-    "ExplorerMobile >= 10"
-  ],
-  "lints": {
-    "js": false,
-    "css": false,
-    "scss": false
-  },
-  "server": {
-    "name": "dev.ullowebapp",
-    "port": 8081
-  }
+	"lints": {
+		"js": false,
+		"css": false,
+		"scss": false
+	},
+    "server": {
+        "name": "dev.ullowebapp",
+        "port": 8081
+    }
 }
